--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -4,6 +4,13 @@
   position: relative;
   padding: 80px 0;
   overflow: hidden;
+  /* Full-width edge-to-edge */
+  width: 100vw;
+  max-width: 100vw;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw !important;
+  margin-right: -50vw !important;
 }
 
 .testimonials::before {
