--- a/src/components/customer/Footer.css
+++ b/src/components/customer/Footer.css
@@ -2,7 +2,7 @@
   background-color: #2c3e50;
   color: white;
   padding: 3rem 0 0;
-  margin-top: auto;
+  margin-top: 0;
 }
 
 .footer-container {
