--- a/src/components/WhyChooseUs.css
+++ b/src/components/WhyChooseUs.css
@@ -1,20 +1,12 @@
 /* Single Auto-Rotating Card - Perfectly Centered */
 .why-choose-section {
-  padding: 100px 0 50px 0;
+  padding: 100px 0;
   background: #f8f9fa;
   position: relative;
   min-height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Full-width edge-to-edge */
-  width: 100vw;
-  max-width: 100vw;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw !important;
-  margin-right: -50vw !important;
-  margin-bottom: 0 !important;
 }
 
 .why-choose-section .container {
@@ -23,8 +15,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 !important;
-  max-width: none !important;
 }
 
 .why-title {
