--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -1,7 +1,6 @@
 /* Modern About Page - No Cards, Creative Layouts */
 .about-page {
   min-height: 100vh;
-  margin-top: calc(var(--navbar-height) * -1);
   background: #ffffff;
 }
 
@@ -62,7 +61,7 @@
 
 .back-button {
   position: absolute;
-  top: calc(var(--navbar-height) + 24px);
+  top: 24px;
   left: 24px;
   z-index: 4;
   display: flex;
@@ -729,7 +728,7 @@
   .back-button {
     padding: 10px 16px;
     font-size: 0.9rem;
-    top: calc(var(--navbar-height) + 16px);
+    top: 16px;
     left: 16px;
   }
 
